マルチログイン関連：roleからガードで分岐

--- a/page-pg/pg08-attendance-admin-list.html
+++ b/page-pg/pg08-attendance-admin-list.html
@@ -23,9 +23,9 @@
       <div class="page-logo"></div>
       <nav class="page-menu">
         <ul>
-          <li><a href="">勤怠</a></li>
           <li><a href="">勤怠一覧</a></li>
-          <li><a href="">申請</a></li>
+          <li><a href="">スタッフ一覧</a></li>
+          <li><a href="">申請一覧</a></li>
           <li><a href="">ログアウト</a></li>
         </ul>
       </nav>
